...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <edu.sdsmt.stop_the_tribbles_daley_raymond.GameView
        android:id="@+id/gameView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
...
            android:layout_height="wrap_content"
            android:onClick="onReset"
            android:text="Reset"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/distractBtn"
            app:layout_constraintTop_toBottomOf="@+id/collectBtn" />

        <Button
            android:id="@+id/collectBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="onCollect"
            android:text="Collect Tribbles"
            app:layout_constraintBottom_toTopOf="@+id/reset"
            app:layout_constraintEnd_toStartOf="@+id/eatBtn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/dayBtn"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/distractBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/scoreCnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Score: 0"
            app:layout_constraintBottom_toTopOf="@+id/tribbleCnt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tribbleCnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tribbles: 100"
            app:layout_constraintBottom_toTopOf="@+id/hungerCnt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scoreCnt" />

        <TextView
            android:id="@+id/hungerCnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hunger: 0"
            app:layout_constraintBottom_toTopOf="@+id/daysCnt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tribbleCnt" />

        <TextView
...
